# obix

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  bacon.toml  deny.toml  docker-compose.yml  flake.nix
.github/workflows/: audit.yml  check-code.yml  test.yml
.sqlx/: query-0d1392856c7f18cdfd54468f3a9ca4bdfce0733c8592803c8481bc76103bddc7.json  query-2b3ffb84c64b4b0bd9c288266b84078346370be4958943a8a85534e08831f932.json  query-4698a743d0635c94ccd212692571e9b4dffe3e863503f2e2493cf417b5b45939.json  query-4d26201bd6042724511bce0243769dc80e38d48e42a8360a3a26e02616c97b41.json  query-52aeaa959e89153ad5feea3b351f01b1e0ecef0dc83a5e847c6c95910003143b.json  query-5796bc8231b4df3f29093df92b353b47aefc7769063d9d4dfd3da62661ac97ed.json  query-64ba109c1fb4da9e2dd92f14ff39008dcff965d667ca1705956d11a894313a45.json  query-67d00fd58ef8d703d28c8bf569d32e3acdb37ced7c7a2fb9947147747acd723b.json  query-68f1b79f4df4546555072b0373c51c4a1c16be8639cf3baf2f1c3bac6f2a3665.json  query-6beff48b99fc9e699e7160ef448721ea8d3a367dc9a120b255609b6b6e8b118e.json  query-6c3dc3a8b9b2df0ee207fb2198d238da3f468a9d47f3d41988aec6f184adb9ca.json  query-813fa44531fd92e055441a8d3b36ba8734bec9da515fd18ccb60985d97a66dcf.json  query-8f39b124b7cb110451c61acceef1382800443e89f37691e424121da7005cab15.json  query-921541bb0d4cc814751923372132d28385f22626f9ef3ab83804d328b9de9db4.json  query-9b746123dd59acea292129ca38e99866a5cbb931bfc86464394bb405f0c4717c.json  query-c61f7034a7b450cf480c0bfe96746c7498bf3ec5c490750a42c01c2b4f1ff7f9.json  query-efb9424cce26653401be812193691f5b8a186eaeb327386b596f557dd224e6b1.json  query-f0cc3b9681c99a73ec8c42c294249170bc55e2c456269c9fbaab803a87217400.json  query-f27faaa2f70ac25923e8f32733e9f661951c82208f6a9b1f873d02c11997fd53.json
ci/: pipeline.yml  repipe  values.yml
ci/tasks/: publish-to-crates.sh  set-dev-version.sh  test.sh  update-repo.sh
migrations/: 20250904065521_job_setup.sql  20251204130225_obix_setup.sql
nix/: podman-runner.nix
obix-macros/: Cargo.toml
obix-macros/src/: lib.rs  outbox_event.rs  tables.rs
src/: config.rs  handle.rs  lib.rs  sequence.rs  tables.rs  test_utils.rs
src/inbox/: config.rs  error.rs  event.rs  job.rs  mod.rs
tests/: helpers.rs  inbox.rs  mailbox.rs  outbox.rs  outbox_event_handler.rs
