[package]
name = "obix"
version = "0.1.0"
edition = "2024"

[features]

fail-on-warnings = ["obix-macros/fail-on-warnings"]
tracing = ["es-entity/tracing-context"]

[dependencies]
obix-macros = { workspace = true }

es-entity = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

[workspace]
resolver = "2"
members = [
  "obix-macros",
]

[workspace.dependencies]

obix-macros = { path = "obix-macros", version = "0.1.0-dev" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
es-entity = { path = "../es-entity" }
anyhow = "1.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
thiserror = "2.0"
sqlx = { version = "0.8", features = ["macros", "runtime-tokio-rustls", "postgres", "uuid", "chrono", "json" ] }
chrono = { version = "0.4", features = ["clock", "serde"], default-features = false }
tracing = { version = "0.1" }
