[package]
name = "obix"
version = "0.2.6"
edition = "2024"
license = "Apache-2.0"
description = "Implementation of outbox backed by PG / sqlx"
repository = "https://github.com/GaloyMoney/obix"
documentation = "https://docs.rs/obix"
categories = ["database"]

[features]

default = ["default-tables"]

fail-on-warnings = ["obix-macros/fail-on-warnings"]
tracing = [
  "es-entity/tracing-context",
  "obix-macros/tracing"
]
default-tables = []

[dependencies]
obix-macros = { workspace = true }

es-entity = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
im = { workspace = true }
job = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
serial_test = { version = "3", features = ["file_locks"] }

[workspace]
resolver = "2"
members = [
  "obix-macros",
]

[workspace.dependencies]

obix-macros = { path = "obix-macros", version = "0.2.6" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
es-entity = "0.10"
anyhow = "1.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
sqlx = { version = "0.8", features = ["macros", "runtime-tokio-rustls", "postgres", "uuid", "chrono", "json" ] }
chrono = { version = "0.4", features = ["clock", "serde"], default-features = false }
tracing = { version = "0.1" }
futures = "0.3"
im = { version = "15.1", features = ["serde"] }
job = "0.6"
thiserror = "2.0"
async-trait = "0.1"
