[package]
name = "obix-macros"
version = "0.2.3-dev"
edition = "2024"
license = "Apache-2.0"
description = "macros for obix crate"
repository = "https://github.com/GaloyMoney/obix"
documentation = "https://docs.rs/obix"
categories = ["database"]

[lib]
proc-macro = true

[features]

fail-on-warnings = []
tracing = []

[dependencies]
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"
darling = "0.23"
